# ik-solver

./: .gitignore  BUILD.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  LICENSE  README.md  build_all_python_versions.ps1  cleanup_build.ps1  ikfast_solver.cp310-win_amd64.pyd  ikfast_solver.cp311-win_amd64.pyd  ikfast_solver.cp312-win_amd64.pyd  ikfast_solver.lib  ikfast_solver.pyd  rebuild_dll.bat  setup.py  test_python.py  test_unity_pose.py
.cache/clangd/index/: ikfast.h.CA14A2FC1D99E24C.idx  ikfast_core.cpp.7E98A6B2A425910A.idx  ikfast_core.hpp.6125191F1406CCBB.idx  ikfast_pybind.cpp.BA21A4F06A5F1E11.idx  ikfast_unity.cpp.DC8B6B9F51281BC5.idx
configs/: joint_limits.json
examples/: IKFastWrapper.cs  RobotIKExample.cs  example_csharp.cs  example_python.py
include/: ikfast.h  ikfast_solver.h
lib/: .gitkeep
src/: README.md  build_ikfast_dlls.bat  ikfast_core.cpp  ikfast_core.hpp  ikfast_pybind.cpp  ikfast_solver.cpp  ikfast_unity.cpp
src/robots/: gp25_12_ikfast.lib  gp25_ikfast.lib  gp4_ikfast.lib  gp50_ikfast.lib  joint_limits.json  kj125_ikfast.cpp  kj125_ikfast.lib  mpx3500_c00x_ikfast.lib  mpx3500_c10x_ikfast.lib
src/robots/kawasaki/KJ125/: KJ125.urdf  joint_limits.json  kj125_ikfast.cpp
src/robots/kawasaki/KJ125/meshes/: base_link.stl  link1.stl  link4.stl  link5.stl  link6.stl
src/robots/kawasaki/RS007L/: RS007L.urdf  joint_limits.json  rs007l_ikfast.cpp
src/robots/kawasaki/RS007L/meshes/: link5.stl  link6.stl
src/robots/yaskawa/GP10/: GP10.urdf  gp10_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP10/meshes/: link5.stl  link6.stl
src/robots/yaskawa/GP12/: GP12.urdf  gp12_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP12/meshes/: link5.stl  link6.stl
src/robots/yaskawa/GP25/: GP25.urdf  gp25_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP25-12/: GP25-12.urdf  gp25_12_ikfast.cpp
src/robots/yaskawa/GP4/: GP4.urdf  gp4_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP50/: GP50.urdf  gp50_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP7/: GP7.urdf  gp7_ikfast.cpp  joint_limits.json
src/robots/yaskawa/GP8/: GP8.urdf  gp8_ikfast.cpp
src/robots/yaskawa/GP8L/: GP8L.urdf  gp8l_ikfast.cpp  joint_limits.json
src/robots/yaskawa/MPX3500-C00X/: MPX3500-C00X.urdf  joint_limits.json  mpx3500_c00x_ikfast.cpp
src/robots/yaskawa/MPX3500-C10X/: MPX3500-C10X.urdf  joint_limits.json  mpx3500_c10x_ikfast.cpp
tests/: Program.cs  README.md  TestIKFast.csproj  test_config_validation.py  test_python.py  test_solver.cpp  unified_test.py
(+13 files in other folders)
